--- a/static/css/general.css
+++ b/static/css/general.css
@@ -20,7 +20,7 @@ main {
     flex: 1;
 }
 
-/* Navbar */
+/* Navbar Styles (your existing code) */
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -34,7 +34,6 @@ main {
     height: 50px;
 }
 
-/* Desktop menu - always visible */
 .menu {
     display: flex;
     list-style: none;
@@ -49,7 +48,6 @@ main {
     font-size: 1.1rem;
 }
 
-/* Hide hamburger and mobile menu on desktop */
 .hamburger {
     display: none;
     flex-direction: column;
@@ -67,25 +65,21 @@ main {
     transition: 0.3s;
 }
 
-/* Hide mobile menu by default */
 .mobile-menu {
     display: none;
 }
 
 /* Mobile styles */
 @media (max-width: 768px) {
-    /* Show hamburger */
     .hamburger {
         display: flex;
         z-index: 1000;
     }
 
-    /* Hide desktop menu */
     .menu {
         display: none;
     }
 
-    /* Show and style mobile menu */
     .mobile-menu {
         display: flex;
         position: fixed;
@@ -118,7 +112,6 @@ main {
         text-align: center;
     }
 
-    /* Hamburger animation */
     .hamburger.active .bar:nth-child(1) {
         transform: rotate(45deg) translate(5px, 5px);
     }
@@ -130,4 +123,29 @@ main {
     .hamburger.active .bar:nth-child(3) {
         transform: rotate(-45deg) translate(7px, -6px);
     }
+}
+
+/* Footer Styles */
+.footer {
+    background: #1e40af; /* Nice blue color */
+    color: white;
+    text-align: center;
+    padding: 1.5rem 1rem;
+    width: 100%;
+    margin-top: auto; /* This pushes it to the bottom */
+}
+
+.footer p {
+    margin: 0;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
+.footer a {
+    color: #bfdbfe;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
