--- a/layouts/_default/services/single.html
+++ b/layouts/_default/services/single.html
@@ -86,7 +86,7 @@
     <p>Contact us today for a free consultation and custom quote tailored to your business needs.</p>
     <div class="cta-buttons">
         <a href="{{ "/contact/" | relURL }}" class="btn-large btn-primary">Get Free Quote</a>
-        <a href="tel:+1234567890" class="btn-large btn-outline">Call Us Now</a>
+        <a href="tel:+61 403 872 586" class="btn-large btn-outline">Call Us Now</a>
     </div>
 </section>
 
