--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- ADD GOOGLE VERIFICATION TAG HERE -->
+    <meta name="google-site-verification" content="Px8jT_S7jKm9xhyvsXHnwoSJQJ_Jqp_o83Udex4VIQ0" />
     <!-- TITLE -->
     <title>
         {{ if .IsHome }}
