--- a/layouts/_default/portfolio/single.html
+++ b/layouts/_default/portfolio/single.html
@@ -5,9 +5,8 @@
 
 <section class="portfolio-carousel">
     <div class="carousel-container">
-        <!-- Main display image -->
+        <!-- Single main display image -->
         <img id="main-image" src="{{ "images/1.png" | relURL }}" alt="Project Image">
-        <img src="{{ "/images/1.png" | relURL }}" alt="Ahbee Website" loading="lazy" width="400" height="300">
 
         <!-- Navigation arrows -->
         <button id="prev-btn" class="carousel-btn">&#10094;</button>
