--- a/static/css/general.css
+++ b/static/css/general.css
@@ -26,8 +26,10 @@ main {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    background: blue;
+    background: url('../images/ahbeewebnav.avif') no-repeat center center;
+    background-size: cover;
     position: relative;
+}
 }
 
 .logo img {
@@ -44,7 +46,7 @@ main {
 }
 
 .menu li a {
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 1.5rem;
 }
